Eliminado el boton de calcular afinidad del modal de afinidad, que se habia olvidado. Habia problemas al quitarlo, he metido un modal-footer dentro del modal-body para que se coloque debajo del <ul> y la ventana modal se adapte al contenido de la lista. Ademas, con css he eliminado el divider del footer.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -987,6 +987,10 @@ header .container {
     font-size: 18px;
 }
 
+.hidde-divider {
+    border-top: 0px solid white !important;
+}
+
 .recipe-data p.recipe-data-secondary {
     color: #bababa;
     font-weight: normal;
