--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -89,13 +89,10 @@
                                     {% endfor %}
                                 </ul>
 
-                                <div class="recipe-modal-children-empty">
-                                <div>
-                                        <a href=""
-                                           class="btn btn-default btn-eathub"><i
-                                                class="fa fa-code-fork"></i> {% trans "Calculate affinity" %}</a>
+                                <div class="modal-footer hidde-divider">
+
                                 </div>
-                                </div>
+
                             {% else %}
                                 <div class="recipe-modal-children-empty">
                                     <span>{% trans "You do not have any friend yet." %}</span>
