Hide por hidde.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -987,7 +987,7 @@ header .container {
     font-size: 18px;
 }
 
-.hidde-divider {
+.hide-divider {
     border-top: 0px solid white !important;
 }
 
