--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -89,7 +89,7 @@
                                     {% endfor %}
                                 </ul>
 
-                                <div class="modal-footer hidde-divider">
+                                <div class="modal-footer hide-divider">
 
                                 </div>
 
