"Ñapa" para que el logo salga centrado. Algo se ha tocado, se deberia encontrar y arreglar correctamente.

--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -13,8 +13,9 @@
         <h1 class="login-welcome-title">{% trans "Welcome to EatHub" %}</h1>
 
         <p class="login-welcome-text">{% trans "Do you like to eat? Then EatHub is for you. Explore everyone's recipes and their variations, create and customize your own food, and collaborate to find the best recipes in the world!" %}</p>
-
-        <svg class="patho path" version="1.1" id="eathub-logo" xmlns="http://www.w3.org/2000/svg" x="0px"
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+            <svg class="patho path" version="1.1" id="eathub-logo" xmlns="http://www.w3.org/2000/svg" x="0px"
          y="0px" viewBox="0 0 612 612" enable-background="new 0 0 612 612" xml:space="preserve" style="height: 370px; width: auto">
             <g id="logo">
                 <path id="base_2_" fill="#CC3E27" fill-opacity="0" stroke="#CC3E27" stroke-width="4" d="M149.2,431v41.3c0,15.3,12.4,27.7,27.7,27.7h264.7c15.3,0,27.7-12.4,27.7-27.7V431H149.2z"></path>
@@ -34,6 +35,9 @@
                     C425.7,155.8,425.7,155.8,425.7,155.8C425.7,155.8,425.7,155.8,425.7,155.8z"></path>
             </g>
         </svg>
+        </div>
+        <div class="col-md-4"></div>
+
     </div>
 
     <div class="col-md-6 login-form">
