--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -130,7 +130,7 @@
         {% for message in messages %}
             <div class="alert alert-{{ message.tags }} alert-dismissable col-md-8 col-md-offset-2">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                {% if message.tags %}<strong>{{ message.tags }}</strong>"{% endif %} {{ message }}
+                {{ message }}
             </div>
         {% endfor %}
     {% endif %}
