--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -114,7 +114,7 @@
 <div class="panel-body">
     <h1>{{ title }}</h1>
 
-    <form role="form well well-lg" class="form-horizontal" method="post" enctype="multipart/form-data" onsubmit="return checkTermsAndConds();">
+    <form role="form well well-lg" class="form-horizontal" method="post" enctype="multipart/form-data" {% if not edit %} onsubmit="return checkTermsAndConds();" {% endif %}>
     {% csrf_token %}
 
 
