--- a/templates/webapp/affinity.html
+++ b/templates/webapp/affinity.html
@@ -17,7 +17,7 @@
 
             </div>
             <div class="col-md-8 recipe-data">
-                <p>{% trans "You" %} ({{ my_profile.display_name }}){% trans " have an affinity of" %} {{ affinity }} % {% trans "with " %}{{ friend.display_name }}
+                <p>{{ user_profile.display_name }} {% trans " have an affinity of" %} {{ affinity }} % {% trans "with " %}{{ recipe.title }}
                 {% trans "in the selected recipe" %}</p>
             </div>
             <div class="col-md-2 recipe-data">
