--- a/templates/webapp/search_recipe_result.html
+++ b/templates/webapp/search_recipe_result.html
@@ -237,7 +237,7 @@
             <label for="inputDisplayName" class="col-sm-1 control-label"></label>
 
             <div class="col-sm-3">
-                <input type="submit" class="btn btn-success" value="Filter"/>
+                <input type="submit" class="btn btn-success" value="{% trans "Filter" %}"/>
             </div>
         </div>
     </fieldset>
