Corregida falta ortografica en affinity

--- a/templates/webapp/affinity.html
+++ b/templates/webapp/affinity.html
@@ -17,8 +17,7 @@
 
             </div>
             <div class="col-md-8 recipe-data">
-                <p>{{ user_profile.display_name }} {% trans " have an affinity of" %} {{ affinity }} % {% trans "with " %}{{ recipe.title }}
-                {% trans "in the selected recipe" %}</p>
+                <p>{{ user_profile.display_name }} {% trans " has an affinity of" %} {{ affinity }} % {% trans "with " %}{{ recipe.title }}</p>
             </div>
             <div class="col-md-2 recipe-data">
 
