Sustituidas imágenes del equipo por las "profesionales"

--- a/templates/webapp/about_team.html
+++ b/templates/webapp/about_team.html
@@ -18,7 +18,7 @@
         <div class="col-md-6 team-more-parent">
             <div class="panel panel-body team-more">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/3688325.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/sergiog.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Sergio García</h3>
@@ -31,7 +31,7 @@
         <div class="col-md-6 team-tastes-parent">
             <div class="panel panel-body team-tastes">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/6684826.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/david.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">David González</h3>
@@ -48,7 +48,7 @@
         <div class="col-md-6 team-more-parent">
             <div class="panel panel-body team-more">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/6688705.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/arturo.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Arturo Jiménez</h3>
@@ -61,7 +61,7 @@
         <div class="col-md-6 team-tastes-parent">
             <div class="panel panel-body team-tastes">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/6689077.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/antonio.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Antonio León</h3>
@@ -77,7 +77,7 @@
         <div class="col-md-6 team-more-parent">
             <div class="panel panel-body team-more">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/1993257.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/sergior.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Sergio Rodríguez</h3>
@@ -90,7 +90,7 @@
         <div class="col-md-6 team-tastes-parent">
             <div class="panel panel-body team-tastes">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/5088244.jpg' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/juanma.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Juan Manuel López</h3>
@@ -105,7 +105,7 @@
         <div class="col-md-6 team-more-parent">
             <div class="panel panel-body team-more">
                 <div class="group-div-image">
-                    <img class="team-image" src="{% static 'webapp/image/545251.png' %}"> </img>
+                    <img class="team-image" src="{% static 'webapp/image/rafa.png' %}"> </img>
                 </div>
                 <div class="group-div-description">
                     <h3 class="team-panel-title">Rafael Vázquez</h3>
