La parte donde se muestra la informacion de recetas, seguidores y siguiendo esta como twitter.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1705,3 +1705,36 @@ footer {
 .profile-margin-top{
     margin-top: 86px !important;
 }
+
+.comment-max-height {
+    height: 75px;
+}
+
+.comment-text{
+    font-style: italic;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.DashboardProfileCard-statLabel {
+    color: black;
+    font-size: 10px;
+    letter-spacing: .02em;
+    text-transform: uppercase;
+    overflow: hidden;
+}
+
+.DashboardProfileCard-statValue {
+    display: block;
+    font-size: 18px;
+    font-weight: 500;
+    color: #cc3e27;
+}
+
+.profile-status-height{
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
