--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -51,20 +51,6 @@
 
                 </div>
 
-
-
-                <!--<div class="text-center">
-
-                    <span><a class="bold" href="{% url 'recipes' profile.user.username %}">{% trans "Recipes" %}</a></span><span class="profile-bold"> {{ recipes|length }}</span>
-
-                </div>
-
-                <div class="text-center">
-
-                    <span><a class="bold" href="{% url 'followers' profile.user.username %}">{% trans "Followers" %}</a></span><span class="profile-bold"> {{ followers_list|length }}</span> | <span><a class="bold" href="{% url 'following' profile.user.username %}">{% trans "Following" %}</a></span><span class="profile-bold"> {{ profile.following|length }}</span>
-
-                </div>-->
-
                 <br />
 
                 {% if user.is_authenticated %}
@@ -82,6 +68,9 @@
                 {% endif %}
 
             </div>
+
+        </div>
+        <div class="col-md-8 card-left">
 
             <div class="panel panel-default panel-body">
 
@@ -158,173 +147,6 @@
             </div>
 
         </div>
-
-        <div class="col-md-8">
-
-            <h2 class="profile-name"> {% trans "Recent activity" %} </h2>
-
-            <div class="col-md-12">
-
-                <h3>Ultimas recetas</h3>
-
-                <div class="row">
-                    <div class="col-md-4 panel follow-list-item recipe-max-height">
-                        <img class="img-rounded" src="/media/images/piru_limon.persist.jpg">
-
-                        <div class="limit-text recipe-title-max-height">
-                            <h3 class="user-name"><a href="">
-                                Piruletas caseras de limón</a></h3>
-                        </div>
-
-                        <br>
-
-                        <div class="recipe-list-time panel-body pull-right">
-                            <span class="glyphicon glyphicon-time"></span>
-                            <span>10</span>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4 panel follow-list-item recipe-max-height">
-                    <img class="img-rounded" src="/media/images/piru_limon.persist.jpg">
-
-                    <div class="limit-text recipe-title-max-height">
-                        <h3 class="user-name"><a href="">
-                            Piruletas caseras de limón</a></h3>
-                    </div>
-
-                    <br>
-
-                    <div class="recipe-list-time panel-body pull-right">
-                        <span class="glyphicon glyphicon-time"></span>
-                        <span>10</span>
-                    </div>
-
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div class="col-md-12">
-
-                <h3>Ultimos seguidores</h3>
-
-                <div class="row">
-                    <div class="col-md-4 panel follow-list-item">
-                        <img class="img-rounded" src="/media/images/maria.persist.jpeg">
-
-                        <h3 class="user-name"><a href="/profile/mariarojas/">
-                            María</a></h3>
-
-                        <p class="location">
-                            <span class="glyphicon glyphicon-map-marker"></span><span>Sevilla</span>
-                        </p>
-
-                        <p class="extra-info">Aún no hay recetas</p>
-                    </div>
-
-                    <div class="col-md-4 panel follow-list-item">
-                        <img class="img-rounded" src="/media/images/maria.persist.jpeg">
-
-                        <h3 class="user-name"><a href="/profile/mariarojas/">
-                            María</a></h3>
-
-                        <p class="location">
-                            <span class="glyphicon glyphicon-map-marker"></span><span>Sevilla</span>
-                        </p>
-
-                        <p class="extra-info">Aún no hay recetas</p>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-12">
-
-                <h3>Ultimos comentarios</h3>
-
-                <div class="row">
-                <div class="col-md-4 panel follow-list-item comment-max-height">
-
-
-                    <div class="limit-text recipe-title-max-height">
-                        <h3 class="user-name"><a href="/recipe/53567d30c54d2d14f943ad33/">
-                            Piruletas caseras de limón</a></h3>
-
-
-                    </div>
-
-                    <br />
-
-                    <p>
-                        Me encantan, voy a modifica...
-                    </p>
-
-                    <!--<p class="location">
-                        <span class="glyphicon glyphicon-map-marker"></span><span></span>
-                    </p>-->
-
-                    <!--<p class="extra-info">Aún no hay recetas</p>-->
-                </div>
-                <div class="col-md-4 panel follow-list-item comment-max-height">
-
-
-                    <div class="limit-text recipe-title-max-height">
-                        <h3 class="user-name"><a href="/recipe/53567d30c54d2d14f943ad33/">
-                            Piruletas caseras de limón</a></h3>
-
-
-                    </div>
-
-                    <br />
-
-                    <p>
-                        Me encantan, voy a modifica...
-                    </p>
-
-                    <!--<p class="location">
-                        <span class="glyphicon glyphicon-map-marker"></span><span></span>
-                    </p>-->
-
-                    <!--<p class="extra-info">Aún no hay recetas</p>-->
-                </div>
-                </div>
-
-            </div>
-
-            <div class="col-md-12">
-
-                <h3>Ultimos votos</h3>
-
-                <div class="row">
-                <div class="col-md-4 panel follow-list-item recipe-max-height">
-                    <img class="img-rounded" src="/media/images/piru_limon.persist.jpg">
-
-                    <div class="limit-text recipe-title-max-height">
-                        <h3 class="user-name"><a href="/recipe/53567d30c54d2d14f943ad33/">
-                            Piruletas caseras de limón</a></h3>
-                    </div>
-
-                    <br>
-
-                    <div class="recipe-list-time panel-body pull-right">
-                        <span class="glyphicon glyphicon-time"></span>
-                        <span>10</span>
-                    </div>
-                    <!--<p class="location">
-                        <span class="glyphicon glyphicon-map-marker"></span><span></span>
-                    </p>-->
-
-                    <!--<p class="extra-info">Aún no hay recetas</p>-->
-                </div>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
 
 {% endblock %}
 
